src/test/deca/context/invalid/provided/ContextSansObjet/typeNonReconnu.deca
//Description:
//  type non reconnu
//
//Résultat:
// Erreur Contextuelle
//  ligne 8 : type non défini
{
itn i=4;
}
